<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ctv_white">

    <ImageView
        android:id="@+id/ivstatebar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/colorAccent" />


        <com.sjzc.fh.pedometer.widget.BaseTitleLayout
            android:id="@+id/titlelayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/ivstatebar"
            android:background="@color/colorAccent"
            app:titleCenterText=" 计 步"
            app:titleLeftImg="@mipmap/icon_menu"
            app:titleLeftImgVisible="true"
            app:titleTextSize="18sp"
            app:titleTextColor="@color/color_white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="140px">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tab_fragment_step_tv_percent"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="20sp" />
                <ProgressBar
                    android:id="@+id/pb_percent"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7.8"
                    android:gravity="center" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tab_fragment_step_goal"
                        android:textColor="#7B7B7B"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_goal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tab_fragment_step_tv_goal"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_fragment_step_tv_step"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="50sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bt_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/step_btn_background"
                    android:text="@string/tab_fragment_step_bt_reset"
                    android:textColor="@android:color/holo_blue_light" />
                <Chronometer
                    android:id="@+id/cm_passtime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:format="00:00:00"
                    android:gravity="center"
                    android:textColor="@color/baseGrayLit"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bt_control"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/step_btn_background"
                    android:text="@string/tab_fragment_step_bt_control"
                    android:textColor="@android:color/holo_blue_light"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <include layout="@layout/step_msg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="#d0d0d0" />

            <include layout="@layout/step_settting" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="#d0d0d0" />

            <include layout="@layout/step_mode" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="#d0d0d0" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_weather"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="100dp"
                    android:background="@mipmap/icon_weather" />
                <Button
                    android:id="@+id/bt_record"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="120dp"
                    android:background="@mipmap/icon_jibu" />
            </LinearLayout>
        </LinearLayout>


    <!--<com.sjzc.fh.pedometer.widget.AnimArcButtons
        android:id="@+id/arc_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>
-->

 </RelativeLayout>
